--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
           <div class="col-5 col-sm-5 col-lg-5 col-12">
             <p class="wow fadeInRight">score all of the saucy details</p>
             <div class="input-group wow fadeInRight">
-              <input type="text" class="form-control" placeholder="Your Email" aria-label="Enter Your E-Mail Address" aria-describedby="button-addon2">
+              <input type="text" class="form-control" placeholder="Enter your Email address" aria-label="Enter Your E-Mail Address" aria-describedby="button-addon2">
               <div class="">
                 <button class="btn btn-danger" type="button" id="button-addon2">SUBMIT</button>
               </div>
@@ -312,7 +312,7 @@
             <a href="#">FAQ</a>
           </div>
           <div class="col">
-            <p>share the salty love</p>
+            <p class="align-center">share the salty love</p>
             <div class="row">
               <div class="col-md-12 col-sm-12 col-lg-4">
                 <span class="youTube">
