--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         </div>
         <div class="row">
           <div class="col-md-6 col-sm-6 col-lg-6 col-12">
-            <p class="wow fadeInUp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. <br><br>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            <p class="wow fadeInUp">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.  <br><br>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
             </p>
           </div>
         </div>
@@ -167,21 +167,21 @@
         <div class="row">
           <div class="col md-4 col-sm-4 col-lg-4 col-12 wow fadeInUp">
             <div class="icons">
-              <img src="images/clock.jpeg" alt="clock-icon">
+              <i class="fas fa-clock"></i>
             </div>
             <h2>time is of the essence</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
           </div>
           <div class="col md-4 col-sm-4 col-lg-4 col-12 wow fadeInUp">
             <div class="icons">
-              <img src="images/users.jpeg" alt="users-icon">
+              <i class="fas fa-users"></i>
             </div>
             <h2>keepin' it real</h2>
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries
           </div>
           <div class="col md-4 col-sm-4 col-lg-4 col-12 wow fadeInUp">
             <div class="icons">
-              <img src="images/1_HP (1).jpeg" alt="icon">
+              <i class="fab fa-envira"></i>
             </div>
             <h2>proof is in the sauce</h2>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
@@ -203,6 +203,8 @@
             <span class="bg-color wow pulse">#thesaltylife</span>
           </div>
         </div>
+      </div>
+      <div class="container-fluid">
         <div class="row slider">
           <div class="col">
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -234,7 +236,9 @@
             </div>
           </div>
         </div>
-        <div class="row">
+      </div>
+      <div class="container">
+        <div class="row slider-bottom">
           <div class="col-md-3 col-sm-3 col-lg-3 col-12">
             <img class="wow pulse" src="images/beef-bread-breakfast-1251198.jpg" alt="food">
             <span class="wow fadeInUp">@loremipsum</span>
@@ -312,7 +316,7 @@
             <a href="#">FAQ</a>
           </div>
           <div class="col">
-            <p class="align-center">share the salty love</p>
+            <p class="">share the salty love</p>
             <div class="row">
               <div class="col-md-12 col-sm-12 col-lg-4">
                 <span class="youTube">
@@ -363,11 +367,5 @@
     wow.init();
   
     </script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <!-- Latest compiled and minified JavaScript -->
-    <!-- <script defer src="https://use.fontawesome.com/releases/v5.4.1/js/all.js" integrity="sha384-L469/ELG4Bg9sDQbl0hvjMq8pOcqFgkSpwhwnslzvVVGpDjYJ6wJJyYjvG3u8XW7" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
   </body>
 </html>
