--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>SASS</title>
 
     <!-- Google font -->
-    <link href="https://fonts.googleapis.com/css?family=Courgette|Mali" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Courgette|Amatic+SC" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <!-- Bootstrap -->
@@ -104,6 +104,15 @@
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
             </p>
           </div>
+          <div class="col-md-12 col-sm-12 col-lg-6 col-12">
+            <div class="wrap-bg-1"></div>
+            <div class="wrap-white">
+              <h3><i class="fas fa-check check-1"></i> Organic</h3>
+              <h3><i class="fas fa-check check-3"></i> gulten-free</h3>
+              <h3><i class="fas fa-check check-3"></i> vegan</h3>
+            </div>
+            <div class="wrap-bg-2"></div>
+          </div>
         </div>
       </div>
     </section>
@@ -138,6 +147,7 @@
             <h2 class="wow fadeInLeft">you are who you sorround yourself with. <br>
             project community
             </h2>
+            <div class=""></div>
             <button class="wow pulse" type="button" class="btn btn-light">TK BRAND PAGE LINK</button>
           </div>
         </div>
