--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#">story <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#mission-section">story <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">sauces</a>
+                <a class="nav-link" href="#salty-section">sauces</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">cook &amp; enjoy</a>
+                <a class="nav-link" href="#flavors-section">cook &amp; enjoy</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">learn</a>
+                <a class="nav-link" href="#gray-section">learn</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">where to buy</a>
+                <a class="nav-link" href="#footer">where to buy</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">food service</a>
+                <a class="nav-link" href="#gallery-section">food service</a>
               </li>
             </ul>
           </div>
@@ -64,7 +64,7 @@
     </header>
     <!-- Header -->
     <!-- Banner -->
-    <section class="banner-section">
+    <section class="banner-section" id="banner-section">
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-8 col-sm-8 col-lg-8 col-12 banner-1">
@@ -90,7 +90,7 @@
     </section>
     <!-- Banner -->
     <!-- Mission Section -->
-    <section class="mission-section">
+    <section class="mission-section" id="mission-section">
       <div class="container">
         <div class="row">
           <div class="col">
@@ -118,7 +118,7 @@
     </section>
     <!-- Mission Section -->
     <!-- Salty Section -->
-    <section class="salty-section">
+    <section class="salty-section" id="salty-section">
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-sm-6 col-lg-6 col-12">
@@ -139,11 +139,12 @@
     </section>
     <!-- Salty Section -->
     <!-- Team Section -->
-    <section class="team-section">
+    <section class="team-section" id="team-section">
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-lg-6 col-sm-6 col-12 offset-md-6 offset-lg-6 offset-sm-6">
             <h1 class="wow fadeInLeft">something to <br>fragment on</h1>
+            <p>〜〜〜〜〜</p>
             <h2 class="wow fadeInLeft">you are who you sorround yourself with. <br>
             project community
             </h2>
@@ -155,12 +156,13 @@
     </section>
     <!-- Team Section -->
     <!-- Flavors Section -->
-    <section class="flavors-section">
+    <section class="flavors-section" id="flavors-section">
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-sm-6 col-lg-6 col-12">
             <h1 class="wow fadeInRight">feel good inside <br> and out</h1>
             <p class="wow fadeInRight">Lorem Ipsum is simply dummy text <br>of the printing and typesetting industry. <br>Lorem Ipsum has been the industry's standard<br> dummy text ever since the 1500s.<br> It has survived not only five centuries</p>
+            <h2>〜〜〜〜〜</h2>
           </div>
         </div>
         <div class="row">
@@ -172,7 +174,7 @@
     </section>
     <!-- Flavors Section -->
     <!-- Three Column -->
-    <section class="gray-section">
+    <section class="gray-section" id="gray-section">
       <div class="container">
         <div class="row">
           <div class="col md-4 col-sm-4 col-lg-4 col-12 wow fadeInUp">
@@ -206,7 +208,7 @@
     </section>
     <!-- Three Column -->
     <!-- Gallery Section -->
-    <section class="gallery-section">
+    <section class="gallery-section" id="gallery-section">
       <div class="container">
         <div class="row">
           <div class="col">
@@ -301,7 +303,7 @@
     </section>
     <!-- Footer Top -->
     <!-- Footer -->
-    <footer>
+    <footer id="footer">
       <div class="container">
         <div class="row footer wow fadeInUp">
           <div class="col">
